--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <div class="card" id="loginCard">
         <h1>Login</h1>
 
-        <input id="email" placeholder="Correo" value="admin@gmail.com">
-        <input id="password" type="password" placeholder="Contraseña" value="1234">
-        <button class="btn" onclick="login()">Entrar</button>
+<input id="loginEmail" placeholder="Correo" value="admin@gmail.com">
+<input id="loginPassword" type="password" placeholder="Contraseña" value="1234">
+<button class="btn" onclick="login()">Entrar</button>
+
     </div>
 
     <!-- PANEL ADMIN -->
