--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- LOGIN -->
     <div class="card" id="loginCard">
-        <h1>Login</h1>
+        <h1>Iniciar Sesión</h1>
 
         <input id="loginEmail" placeholder="Correo" value="admin@gmail.com">
         <input id="loginPassword" type="password" placeholder="Contraseña" value="1234">
